# trnascan-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
docs/: faithful_port_spec.md
src/: lib.rs
src/arrays/: mod.rs
src/cm_funcs/: mod.rs
src/cm_scan/: decode.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  save.rs  scanner.rs
src/eufind/: constants.rs  mod.rs  pavesi.rs
src/genetic_code/: mod.rs
src/isotype/: anticodon.rs  mod.rs  scorer.rs
src/log/: mod.rs
src/maxmodel/: emission.rs  matrix.rs  mod.rs  prior.rs  recursion.rs  traceback.rs  transition.rs  types.rs
src/options/: mod.rs
src/pipeline/: config.rs  mod.rs  output.rs  scanner.rs
src/result_files/: cm_scan_result.rs  fp_scan_result.rs  int_result.rs  mod.rs  multi_result.rs  reader.rs
src/scan_result/: mod.rs
src/sequence/: mod.rs
src/sprinzl/: mod.rs
src/squid/: iupac.rs  mod.rs  sqio.rs  types.rs
src/ss/: mod.rs
src/stats/: mod.rs
src/structs/: mod.rs
src/structure/: konings.rs  mod.rs
src/trna/: mod.rs
src/trnascan/: detect.rs  matrix.rs  mod.rs  params.rs  seq_utils.rs  signals.rs
src/types/: cm.rs  constants.rs  mod.rs  state.rs  trace.rs
src/util/: mod.rs  sre_math.rs
src/utils/: mod.rs
src/viterbi/: dbscan.rs  mod.rs  model.rs  small.rs  viterbi.rs
tests/: parity.sh  phase10_full_test.rs  phase1_constants_test.rs  phase2_random_test.rs  phase3_squid_test.rs  phase4_cm_test.rs  phase5_viterbi_test.rs  phase6_eufind_test.rs  phase7_structure_test.rs  phase8_isotype_test.rs  phase9_pipeline_test.rs
tests/common/: mod.rs
tests/golden/: PHASE9_SUMMARY.md
tests/golden/cm/: README.md  cm_structure.txt  gen_cm  gen_cm.c  istate_dump.txt  node_details.txt
tests/golden/constants/: gen_ilog2  gen_ilog2.c  ilog2_values.txt
tests/golden/eufind/: INDEX.md  Makefile  README.md  SUMMARY.md  abox_scores.txt  bbox_scores.txt  gen_eufind  gen_eufind.c  gen_weight_matrices  gen_weight_matrices.c  trna_detection.txt  verify.sh  weight_matrices.txt
tests/golden/full_run/: README.md
tests/golden/isotype/: .gitattributes  00-START-HERE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md  VERIFICATION.txt  anticodon_table.txt  cm_model_info.txt  isotype_assignments.txt  isotype_scores.txt  test_cases.md
tests/golden/math/: gen_norm  gen_norm.c  norm_values.txt
tests/golden/pipeline/: FIELD_VALIDATION.md  QUICK_REFERENCE.md  cmdline_args.txt  error_cases.txt  input_validation.txt
tests/golden/random_sequence/: gauss_100.txt  gen_gaussrandom  gen_gaussrandom.c  gen_random  gen_random.c  random_1000.txt
tests/golden/squid/: README.md  format_detection.txt  gen_squid  gen_squid.c  sqinfo_fields.txt
tests/golden/squid/inputs/: test.embl  test.fasta  test.gb  test.raw
tests/golden/structure/: ct_output.txt  gen_structure  gen_structure.c  khs_output.txt  rna_complement.txt
tests/golden/viterbi/: INDEX.txt  Makefile  README.md  SUMMARY.md  gen_viterbi  gen_viterbi.c  test_sequences.fa  traceback.txt  verify.sh  viterbi_scores.txt
tests/reference_golden/: Example1-Bhd.out  Example1-ref-B.out  Example2-Bhd.out  Example2-ref-B.out
tests/scripts/: compare_outputs.sh  verify_phase.sh
