[package]
name = "trnascan-rs"
version = "0.2.1"
edition = "2021"
authors = ["Sunju Kim <n.e.coli.1822@gmail.com>"]
license = "GPL-3.0-or-later"
description = "trnascan-rs: a Rust reimplementation of tRNAscan-SE 2.0 for transfer-RNA detection, using the byte-parity infernox (Infernal) covariance-model engine. Argv-faithful drop-in CLI."
repository = "https://github.com/necoli1822/trnascan-rs"
homepage = "https://github.com/necoli1822/trnascan-rs"
readme = "README.md"
keywords = ["bioinformatics", "trna", "trnascan", "rna", "genomics"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "trnascan-rs"
path = "src/bin/trnascan.rs"

[dependencies]
regex = "1.10"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
lazy_static = "1.4"
hostname = "0.3"
rayon = "1.10"
# Single-crate infernox (byte-parity Infernal cmsearch engine; exposes the
# faithful library API FaithfulSearcher at the crate root, Easel as
# `infernox::easel`). Requires infernox >= 0.2.0, which adds the striped-SSE
# Viterbi filter (byte-identical output, faster CM search) on top of the
# --Fmid fix that keeps the arch/isotype scan (e.g. Hsalinarum -A Gln)
# byte-identical to C.
# For a local side-by-side source build, override with:
#   [patch.crates-io] infernox = { path = "../infernox" }
infernox = "0.2.0"

[dev-dependencies]
tempfile = "3.8"
